--- a/Templates/CubeMX/CubeMX.csolution.yml
+++ b/Templates/CubeMX/CubeMX.csolution.yml
@@ -1,7 +1,13 @@
 # A solution is a collection of related projects that share same base configuration.
 solution:
-  created-for: CMSIS-Toolbox@2.3.0
+  created-for: CMSIS-Toolbox@2.6.0
   cdefault:
+
+  select-compiler:  # list of tested compilers that can be selected
+    - compiler: AC6
+    - compiler: GCC
+    - compiler: IAR
+    - compiler: CLANG
 
   # List the packs that define the device and/or board.
   packs:
